Split formulas in smaller automata (JNI) and simplify automaton interface.
Closes #115